@@ -16,6 +16,7 @@ Version 1.0.3 to be released
 - New: Added skeleton application and refactored 'yiic webapp' command (Qiang)
 - New: Added 'expression' option to access rules (Qiang)
 - New: Refactored the code generated by yiic command (Qiang)
+- New: Added ignoreLimit option when joining tables all at once (Qiang)
 
 
 Version 1.0.2 February 1, 2009
